test/samples/valid/nested_polymorphic.maruir
struct S1<M> {
	arr1: u8[] *M;
}

struct S2<M, N> {
	ptr1: S1<N> *M;
	ptr2: u16[] *N;
}

fun getSArr1<P, Q>(ptrS2: S2<P,Q> *Q): u8[] *Q
locals ptrS1: S1<Q> *P,
	   ptrArr1: u8[] *Q;
{
	entry:

	load ptrS2.ptr1 in ptrS1;
	load ptrS1.arr1 in ptrArr1;

	return ptrArr1;
}

fun main(ptrS2: S2<#X, #Y> *#Y): u8[] *#Y
locals ptr: u8[] *#Y;
{
	entry:

	ptr := call getSArr1<#X, #Y>(ptrS2);
	return ptr;
}
